main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <label>Service Builder</label>
    <nameField>
        <label>Service Builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>