main/default/objects/Service__c/fields/Display_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Display_at_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display at Home</label>
    <type>Checkbox</type>
</CustomField>