main/default/objects/Service__c/fields/Display_Practice__c.field-meta.xml
<CustomField>
    <fullName>Display_Practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Practice</label>
    <type>Checkbox</type>
</CustomField>