main/default/objects/Service__c/fields/Practice_Management__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Builder</label>
    <referenceTo>Practice_Management__c</referenceTo>
    <relationshipLabel>Service Builder</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <type>Lookup</type>
</CustomField>