main/default/objects/Service__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Inquiry</fullName>
            </value>
            <value>
                <fullName>Acute Illness</fullName>
            </value>
            <value>
                <fullName>Annual Labs</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>Chronic Condition</fullName>
            </value>
            <value>
                <fullName>Preventive Care</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>