main/default/objects/Service__c/fields/Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Reason</label>
    <referenceTo>Service_Reason__c</referenceTo>
    <relationshipLabel>Service Builder</relationshipLabel>
    <relationshipName>Service_Builder</relationshipName>
    <type>Lookup</type>
</CustomField>