main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Practice_Management__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>